<resources>
    <string name="app_name">OnyxRidge</string>
    <string name="login_button_text">Login</string>
    <string name="main_menu">Main menu</string>
    <string name="browse_reports">Browse Reports</string>
    <string name="browse_photos">Browse Photos</string>
    <string name="settings_and_help">Help/FAQ</string>
        <string name="project_title">Project: </string>
        <string name="filter_content">Filter</string>
        <string name="sort_content">Sort</string>
        <string name="date_of_content">Date of content: </string>
        <string name="document_written_by">Written by: </string>
        <string name="photo_taken_by">Taken by: </string>
        <string name="photo_date_taken_on">Date taken: </string>
        <string name="create_project_total_cv_title">Create the Project Overall Totals Report</string>
        <string name="create_yearly_report_cv_title">Create a Yearly Report</string>
        <string name="create_report_by_month_cv_title">Create a Report by Month</string>
        <string name="create_new_report_cv_title">Create a New Report</string>
        <string name="upload_existing_report_cv_title">Upload an Existing Report</string>
        <string name="take_new_photo_cv_title">Take a New Photo</string>
        <string name="create_report_of_accidents_cv_title">Create a Report of Accidents</string>
        <string name="create_new_project_cv_title">Create a New Project</string>
        <string name="job_name_title">Project Name: </string>
        <string name="date_title">Date: </string>
        <string name="workers_title">Workers: </string>
        <string name="hours_per_worker_title">Hours Worked Per Worker: </string>
        <string name="daily_log_title">Daily Log: </string>
        <string name="weather_title">Weather: </string>
        <string name="accident_happened_title">Did an accident happen? </string>
        <string name="accident_log_title">Accident Log: </string>
        <string name="total_hours_title">Total Hours: </string>
        <string name="workers_postfix">workers.</string>
        <string name="hours_postfix">hours.</string>
        <string name="total_hours_postfix">total hours.</string>
        <string name="no_accident_occurred_text">No accident has occurred.</string>
        <string name="no_pictures_chosen">No Pictures Selected.</string>
        <string name="year_header_title">Year: </string>
        <string name="submit_content">Submit</string>
        <string name="upload_content">Upload</string>
        <string name="upload_existing_report_title">Upload an Existing Report</string>
        <string name="upload_existing_photo_title">Upload an Existing Photo</string>
        <string name="select_file_to_upload">Select File</string>
        <string name="loading_in_progress">Loading…</string>
        <string name="uploading_in_progress">Uploading…</string>
        <string name="take_new_photo">Take new photo</string>
        <string name="take_new_photo_title">Take and Upload a New Photo</string>
        <string name="create_new_thing">Create</string>
        <string name="frequently_asked_questions_title">Frequently Asked Questions (FAQ)</string>
        <string name="help_title">Help</string>
        <string name="navigating_menus_header">Navigating Menus</string>
        <string name="uploading_reports_header">Uploading Reports</string>
        <string name="create_new_report_subheader">Creating a New Report</string>
        <string name="uploading_existing_report_subheader">Uploading an Existing Report or PDF</string>
        <string name="browsing_reports_header">Browsing Reports</string>
        <string name="downloading_reports_subheader">Downloading Reports</string>
        <string name="uploading_photos_header">Uploading Photos</string>
        <string name="taking_a_new_photo_subheader">Taking a New Photo</string>
        <string name="uploading_an_existing_photo_subheader">Uploading an Existing Photo</string>
        <string name="browsing_photos_header">Browsing Photos</string>
        <string name="downloading_photos_subheader">Downloading Photos</string>
        <string name="no_sort">No Sort</string>
        <string name="sort_by_last_name_asc">By Last Name, Asc.</string>
        <string name="sort_by_last_name_desc">By Last Name, Desc.</string>
        <string name="sort_by_date_asc">By Date, Asc.</string>
        <string name="sort_by_date_desc">By Date, Desc.</string>
        <string name="no_filter">No Filter</string>
        <string name="accident_happened">Has Accident</string>
        <string name="job_name_default_value">Project Name</string>
        <string name="weather_default_value">Weather</string>
        <string-array name="weather_values">
            <item>Weather</item>
            <item>Sunny</item>
            <item>Cloudy</item>
            <item>Rain</item>
            <item>Snow</item>
        </string-array>
        <string name="confirm_sign_out_title">Confirm sign out</string>
        <string name="sign_out_confirmation_desc">This action will sign you out. Continue?</string>
        <string name="confirm_logoff">Logout</string>
        <string name="cancel">Cancel</string>
        <string name="create_monthly_total_title">Create Monthly Hourly Report</string>
        <string name="create_yearly_total_title">Create Yearly Hourly Report</string>
        <string name="create_project_total_title">Create Project Total Hourly Report</string>
        <string name="create_accident_report_title">Create a Report of Accidents</string>
        <string name="create_monthly_total_button">Create report</string>
        <string name="login_succeeded">Login successful.</string>
        <string name="report_upload_success">Report uploaded.</string>
        <string name="photo_upload_success">Photo uploaded.</string>
        <string name="project_creation_success">Project created successfully.</string>
        <string name="no_project_chosen">No project chosen.</string>
        <string name="email_not_entered">You must enter an email.</string>
        <string name="email_not_correct">This email is not associated with an account.</string>
        <string name="password_not_entered">You must enter a password.</string>
        <string name="password_not_correct">Your password is not correct.</string>
        <string name="login_failed_creds">Login failed, please check credentials.</string>
        <string name="login_failed_admin">Login failed, contact administration.</string>
        <string name="user_not_formatted_right">This user\'s information is not accurate or correctly formatted</string>
        <string name="projects_not_found">No projects found.</string>
        <string name="projects_not_loaded">Projects cannot be loaded.</string>
        <string name="no_documents_found">No documents to show.</string>
        <string name="pdf_viewing_report_not_loaded_admin">File cannot be loaded; contact administrator</string>
        <string name="no_photos_admin">Cannot display photos; contact administrator</string>
        <string name="no_photos_to_show">No photos to show.</string>
        <string name="photo_cannot_be_loaded">Photo cannot be loaded; contact administrator</string>
        <string name="job_name_not_chosen">A project name must be selected.</string>
        <string name="workers_on_site_not_entered">\'Workers on Site\' must be entered.</string>
        <string name="hours_worked_not_entered">\'Hours Worked\' must be entered.</string>
        <string name="daily_log_not_entered">\'Daily Log\' must be filled.</string>
        <string name="weather_not_chosen">A weather type must be chosen.</string>
        <string name="accident_happened_not_entered">If an accident occurred, a description must be entered.</string>
        <string name="hours_worked_not_formatted_properly">\'Hours worked\' must be entered in the format: XX.XX</string>
        <string name="upload_report_failed">Report upload failed.</string>
        <string name="upload_photo_failed">Photo upload failed.</string>
        <string name="metatdata_not_applied_admin">File upload partially completed; contact administrator</string>
        <string name="no_project_chosen_upload">You must select a project before uploading</string>
        <string name="no_file_chosen_for_upload">No file chosen for upload; you must select a file.</string>
        <string name="no_picture_taken_for_upload">No picture taken; you must take a picture in order to upload.</string>
        <string name="no_documents_found_with_month_day">No reports were found for this month. Please recheck.</string>
        <string name="no_month_entered">Please enter a month</string>
        <string name="no_year_entered">Please enter a year</string>
        <string name="report_not_made_admin">Report not created; contact administrator</string>
        <string name="accident_report_no_accidents">No accidents exist for this project</string>
        <string name="no_year_found_for_project">There are no reports for this project during this year</string>
        <string name="no_reports_found_for_project_overall_total">No reports were found for this project</string>
        <string name="accident_report_not_entered_admin">Accident information not entered; contact administrator</string>
        <string name="no_new_project_name_entered">No project name entered; you must enter a project name</string>
        <string name="project_not_made_admin">Project not created; contact administrator</string>
        <string name="project_name_too_short">The project name must be six (6) characters or longer</string>
        <string name="filter_option_not_valid">Can\'t use this option to filter</string>
        <string name="sort_option_not_valid">Can\'t use this option to sort</string>
        <string name="no_documents_to_sort">There are no documents to sort</string>
        <string name="no_images_to_sort">There are no photos to sort</string>
        <string name="no_documents_to_filter">There are no documents to filer</string>
        <string name="no_images_to_filer">There are no images to filter</string>
        <string name="login_password_hint">Password</string>
        <string name="login_email_hint">Email address</string>
        <string name="workers_number_hint">Number of workers</string>
        <string name="hours_worked_per_worker_hint">Hours worked</string>
        <string name="job_year_hint">Year (ex. \'2020\')</string>
        <string name="job_month_hint">Month (ex. \'November\')</string>
        <string name="new_project_name_hint">Project name</string>
    <string name="accessibility_create_yearly_icon">Create yearly report icon</string>
    <string name="accessibility_create_monthly_report_icon">Create monthly report icon</string>
    <string name="accessibility_create_new_report_icon">Create new report</string>
    <string name="accessibility_upload_existing_report_icon">Upload existing report</string>
    <string name="accessibility_take_new_photo_icon">Take new photo</string>
    <string name="accessibility_upload_existing_photo_icon">Upload existing photo</string>
    <string name="accessibility_create_report_of_accidents">Create report of accidents photo</string>
    <string name="accessibility_image_instance_thumbnail">Image thumbnail</string>
    <string name="accessibility_project_total_icon">Create project total report icon</string>
    <string name="accessibility_create_new_project_icon">Create new project icon</string>
</resources>