<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/report_to_generate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/job_name_text_view"
            android:padding="10dp"
            />

        <Spinner
            android:id="@+id/job_name_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/job_name_text_view"
            app:layout_constraintTop_toTopOf="@id/job_name_text_view"
            app:layout_constraintBottom_toBottomOf="@id/job_name_text_view"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/job_name_text_view"
            app:layout_constraintStart_toStartOf="@id/job_name_text_view"
            android:id="@+id/date_title_text_view"
            android:text="@string/date_title"
            android:padding="10dp"
            />
        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/date_chooser"
            android:layout_margin="10dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/job_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/date_chooser"
            android:id="@+id/workers_on_site_text_view"
            android:text="@string/workers_title"
            android:padding="10dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/workers_number_hint"
            app:layout_constraintStart_toEndOf="@id/workers_on_site_text_view"
            app:layout_constraintTop_toTopOf="@id/workers_on_site_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:inputType="number"
            android:id="@+id/workers_on_site_edit_text"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/job_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/workers_on_site_text_view"
            android:id="@+id/hours_worked_text_view"
            android:text="@string/hours_per_worker_title"
            android:padding="10dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hours_worked_per_worker_hint"
            app:layout_constraintStart_toEndOf="@id/hours_worked_text_view"
            app:layout_constraintTop_toTopOf="@id/hours_worked_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:inputType="numberDecimal"
            android:id="@+id/hours_worked_edit_text"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/job_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/hours_worked_edit_text"
            android:id="@+id/daily_log_text_view"
            android:text="@string/daily_log_title"
            android:padding="10dp"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_log_text_view"
            android:id="@+id/daily_log_edit_text"
            android:layout_margin="15dp"
            android:inputType="textMultiLine"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/daily_log_edit_text"
            app:layout_constraintStart_toStartOf="@id/job_name_text_view"
            android:text="@string/weather_title"
            android:padding="10dp"
            android:id="@+id/weather_text_view"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/weather_text_view"
            app:layout_constraintBottom_toBottomOf="@id/weather_text_view"
            app:layout_constraintStart_toEndOf="@id/weather_text_view"
            android:id="@+id/weather_spinner"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accident_happened_title"
            app:layout_constraintStart_toStartOf="@id/job_name_text_view"
            app:layout_constraintTop_toBottomOf="@id/weather_text_view"
            android:id="@+id/accident_happened_text_view"
            android:padding="10dp"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/accident_happened_text_view"
            app:layout_constraintTop_toTopOf="@id/accident_happened_text_view"
            app:layout_constraintBottom_toBottomOf="@id/accident_happened_text_view"
            android:id="@+id/accident_happened_check_box"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/accident_happened_text_view"
            android:id="@+id/accident_happened_description"
            android:layout_margin="15dp"
            android:inputType="textMultiLine"
            />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_content"
            android:layout_marginVertical="15dp"
            app:layout_constraintTop_toBottomOf="@id/accident_happened_description"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/generate_report_submit_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>