<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/project_name_ll"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/project_title"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="5dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/project_name"
            android:text="@string/no_project_chosen"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/filter_sort_ll"
        app:layout_constraintTop_toBottomOf="@id/project_name_ll"
        app:layout_constraintBottom_toTopOf="@id/content_browse_rec_view">
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/filter_text_view"
            android:text="@string/filter_content"
            android:textSize="20sp"
            android:padding="5dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/sort_text_view"
            android:text="@string/sort_content"
            android:textSize="20sp"
            android:padding="5dp"
            android:textAlignment="textEnd"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/filter_sort_ll"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/content_browse_rec_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>