<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_monthly_total_title"
        android:textSize="30sp"
        android:layout_margin="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/job_name_spinner"
        android:textAlignment="center"
        android:id="@+id/create_monthly_report_menu_text_view"
        />

    <Spinner
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        android:id="@+id/job_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/create_monthly_report_menu_text_view"
        app:layout_constraintBottom_toTopOf="@id/year_month_input_fields"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/job_name_spinner"
        app:layout_constraintBottom_toTopOf="@id/create_monthly_report_menu_text_view"
        android:id="@+id/year_month_input_fields"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/job_year_hint"
            android:id="@+id/job_year_input_field"
            android:inputType="number"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/job_month_hint"
            android:id="@+id/job_month_input_field"
            android:inputType="textPersonName"
            />
    </LinearLayout>



    <com.github.barteksc.pdfviewer.PDFView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toBottomOf="@id/year_month_input_fields"
        app:layout_constraintBottom_toTopOf="@id/create_report_button"
        android:id="@+id/total_report_viewer_pdf_view"
        android:background="@color/blackTranslucent"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_report_button"
        app:layout_constraintTop_toBottomOf="@id/total_report_viewer_pdf_view"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="15dp"
        android:text="@string/create_monthly_total_button"
        />
</androidx.constraintlayout.widget.ConstraintLayout>