<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:layout_margin="15dp"
        android:id="@+id/job_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_new_photo_title"
        android:textSize="30sp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/job_name_spinner"
        android:textAlignment="center"
        android:id="@+id/upload_existing_menu_tv"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/upload_existing_menu_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/image_view_for_file"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_view_for_file">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/take_new_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="7dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/take_new_photo"
            app:icon="@drawable/ic_camera_take_new_mini"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_content"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/take_new_button"
            app:layout_constraintStart_toEndOf="@id/take_new_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/ic_upload"
            android:id="@+id/upload_file_to_storage_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>