<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:layout_marginTop="20dp"
        android:layout_marginVertical="15dp"
        android:id="@+id/job_name_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_existing_report_title"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/job_name_spinner"
        android:textAlignment="center"
        android:id="@+id/upload_existing_menu_text_view"
        />

    <com.github.barteksc.pdfviewer.PDFView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintTop_toBottomOf="@id/upload_existing_menu_text_view"
        app:layout_constraintBottom_toTopOf="@id/attach_and_upload_file"
        android:id="@+id/file_preview_viewer"
        android:layout_marginHorizontal="15dp"
        android:background="@color/blackTranslucent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/attach_and_upload_file"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="30dp"
        >
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select_file_to_upload"
            android:id="@+id/select_file_from_explorer"
            app:icon="@drawable/ic_attach_file"
            app:iconGravity="end"
            android:layout_weight="1"
            android:layout_marginEnd="7dp"
            />
        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upload_content"
            android:layout_weight="1"
            android:id="@+id/upload_file_to_storage_button"
            app:icon="@drawable/ic_upload"
            android:layout_marginStart="7dp"/>
    </LinearLayout>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/working_and_loading_text_view"
        app:layout_constraintTop_toBottomOf="@id/attach_and_upload_file"
        android:textAlignment="center"
        />
</androidx.constraintlayout.widget.ConstraintLayout>